hphp/test/slow/prop-type-hints/invalid-prop-type1.php.expectf
Fatal error: Invalid property type hint for 'A::$x' in %s/invalid-prop-type1.php on line 5
